// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nav bar handles successful logout 1`] = `
<div
  className="sc-AxhCb bZwceu"
>
  <h3>
    Apollo
  </h3>
  <div>
    <a
      className="sc-AxiKw gtGpgZ sc-AxhUy jjMkGi"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="sc-AxjAm sc-AxirZ sc-AxgMl jrSzpm"
    onClick={[Function]}
  >
    Log out
  </button>
</div>
`;

exports[`nav bar render admin link for admins 1`] = `
<div
  className="sc-AxhCb bZwceu"
>
  <h3>
    Apollo
  </h3>
  <div>
    <a
      className="sc-AxiKw gtGpgZ sc-AxhUy jjMkGi"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
    <a
      className="sc-AxiKw gtGpgZ sc-AxhUy jjMkGi"
      href="/admin"
      onClick={[Function]}
    >
      Admin
    </a>
  </div>
  <button
    className="sc-AxjAm sc-AxirZ sc-AxgMl jrSzpm"
    onClick={[Function]}
  >
    Log out
  </button>
</div>
`;

exports[`nav bar renders correctly 1`] = `
<div
  className="sc-AxhCb bZwceu"
>
  <h3>
    Apollo
  </h3>
  <div>
    <a
      className="sc-AxiKw gtGpgZ sc-AxhUy jjMkGi"
      href="/"
      onClick={[Function]}
    >
      Dashboard
    </a>
  </div>
  <button
    className="sc-AxjAm sc-AxirZ sc-AxgMl jrSzpm"
    onClick={[Function]}
  >
    Log out
  </button>
</div>
`;
